Coaslesce unit tests are added